--- a/static/style.css
+++ b/static/style.css
@@ -1,7 +1,30 @@
 
-h1 { color: #34e5ff; font-family: 'Raleway',sans-serif; font-size: 62px; font-weight: 800; line-height: 72px;
- margin: 0 0 24px; text-align: center; text-transform: uppercase; }
+h1 { color: "black"; font-family: 'Raleway',sans-serif; font-size: 62px; font-weight: 800; line-height: 72px;
+ margin: 0 0 24px; text-align: center;  }
 
+p#placename{
+  color:"black";
+  font-family: sans-serif;
+  font-size: 50px;
+  margin: 10px;
+  font-weight: 10px;
+  background-color:"gray";
+}
+a#placelink{
+  position: absolute;
+  left:"50px";
+  top:"600px";
+}
+.addplace{
+  position:absolute;
+  top:200px;
+  left:800px;
+  
+  
+}
+.addplace h3{
+  font-size: 20px;
+}
 ul.topnav {
     list-style-type: none;
     margin: 0;
