--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,31 +1,97 @@
 <!DOCTYPE html>
 <html>
 <head>
+
+<meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>Dive place</title>
+
+    <!-- Bootstrap Core CSS -->
+    <link href="{{url_for('static', filename='css/bootstrap.min.css')}}" rel="stylesheet">
+   
+
+    <!-- Custom CSS -->
+    <link href="{{url_for('static', filename='css/clean-blog.min.css')}}" rel="stylesheet">
+
+    <!-- Custom Fonts -->
+     <link href="{{url_for('static', filename='css/bootstrap.css')}}" rel="stylesheet">
 <link rel = stylesheet type="text/css" href="{{url_for('static', filename='style.css')}}">
 	  <script src="{{url_for('static', filename='j.js')}}"></script> 
-
 </head>
 <body>
- <ul class="topnav" id="myTopnav">
-  <li><a href="{{url_for('places')}}">Home</a></li>
-  <li><a href="#news">News</a></li>
-  <li><a href="{{url_for('profile')}}">My profile</a></li>
-  <li class="icon">
-    <a href="javascript:void(0);" onclick="myFunction()">&#9776;</a>
-  </li>
-</ul>
-<strong></strong>
-<h1>{{user.name}}</h1></strong> <h1>welcome to your profile page!</h1>
-<h3>Your favorite dives:</h3>
-<ul id = "favs">
-{% for f in favorite %}
-<li>
-<p> {{f}}</p>
+ <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+               <p class="navbar-brand">{{user1.name}}</p>
+            </div>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <a href="{{url_for('places')}}">Places</a>
+                    </li>
+                    <li>
+                        <a href="services.html">News</a>
+                    </li>
+                    <li><a href="{{url_for('profile', user_id = user.id)}}">My profile</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container -->
+    </nav>
 
-</li>
-{% endfor %}
 
-</ul>
+
+<div class="container">
+		<div class = row>
+		<div class="col-lg-12">
+                <h1 class="page-header"><br>
+                   Your profile
+                </h1>
+            </div>
+
+           <div class="col-md-4">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h4><i class="fa fa-fw fa-check"></i> Your favorites:</h4>
+                    </div>
+                    <div class="panel-body">
+
+						<ul id = "favs">
+						{% for f in fav %}
+						{% if f.id == user.id %}
+						<li>
+						<a href= "{{url_for('diveplace', place_id = dive.id)}}"><p> {{dive.name}}</p></a>
+
+						</li>
+						{% endif %}
+						{% endfor %}
+
+						</ul>
+
+
+
+                         </div>
+
+                    </div>
+                </div>
+            </div>
+</div>
+            
+
 <a href="{{url_for('logout')}}">Logout</a>
 </body>
 </html>
