--- a/templates/boats.html
+++ b/templates/boats.html
@@ -50,10 +50,11 @@
                     <li>
                         <a href="services.html">News</a>
                     </li>
-                    
-                    </li>
-                     <li>
+                    <li>
                         <a href="{{url_for('boats')}}">Boats</a>
+                    </li>
+                    
+                    
                     </li>
                 </ul>
             </div>
@@ -69,11 +70,11 @@
         <div class="row">
             <div class="col-lg-12">
             <br>
-                <h1 class="page-header">Diving destinations
+                <h1 class="page-header">Wreck destinations
                     <small>{{user.name}}</small>
                 </h1>
-                <a href = "{{url_for('random')}}"> Feeling random?</a>
-                <form action = "{{url_for('search')}}" method = "post">
+                <a href = "{{url_for('random1')}}"> Feeling random?</a>
+                <form action = "{{url_for('search1')}}" method = "post">
                 <input type = "search" name = "search" placeholder="Search for a place to dive">
                 <input type="submit" name="look_for" value="Dive!">
                 </form>
@@ -84,25 +85,25 @@
 
     
     
-        {% if place==[] %}
+        {% if boat==[] %}
         <p> No items now</p>
         {% else %}
 
-        {% for place in place %}
+        {% for boat in boat %}
        
         <div class="row">
             <div class="col-md-7">
                 
-                    <img class="img-responsive" src="{{place.photo1}}" alt="">
+                    <img class="img-responsive" src="{{boat.photo1}}" alt="">
                
             </div>
             <div class="col-md-5">
-                <h3>{{place.name}}</h3>
+                <h3>{{boat.name}}</h3>
                 
                 
                 <p>{{x}} Reviews</p>
                 
-                <a class="btn btn-primary" href="{{url_for('diveplace', place_id = place.id)}}" id = "placelink">View<span class="glyphicon glyphicon-chevron-right"></span></a>
+                <a class="btn btn-primary" href="{{url_for('boatplace', boat_id = boat.id)}}" id = "placelink">View<span class="glyphicon glyphicon-chevron-right"></span></a>
             </div>
         </div>
         <!-- /.row -->
