--- a/templates/profile.html
+++ b/templates/profile.html
@@ -33,7 +33,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-               <p class="navbar-brand">{{user1.name}}</p>
+               <p class="navbar-brand">{{user.name}}</p>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -41,11 +41,15 @@
                     <li>
                         <a href="{{url_for('places')}}">Places</a>
                     </li>
+                     <li>
+                        <a href="{{url_for('boats')}}">Boats</a>
+                    </li>
                     <li>
                         <a href="services.html">News</a>
                     </li>
                     <li><a href="{{url_for('profile', user_id = user.id)}}">My profile</a>
                     </li>
+
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -61,9 +65,9 @@
                 <h1 class="page-header"><br>
                    Your profile
                 </h1>
-            </div>
+            
 
-           <div class="col-md-4">
+           <div class="col-md-6">
                 <div class="panel panel-default">
                     <div class="panel-heading">
                         <h4><i class="fa fa-fw fa-check"></i> Your favorites:</h4>
@@ -71,13 +75,48 @@
                     <div class="panel-body">
 
 						<ul id = "favs">
-						{% for f in fav %}
-						{% if f.id == user.id %}
+						{% if user.places == [] %}
+						<p>No favorites yet</p>
+
+						{% else %}
+						{% for f in user.places%}
 						<li>
-						<a href= "{{url_for('diveplace', place_id = dive.id)}}"><p> {{dive.name}}</p></a>
+						<p> {{f.name}}</p><form action = "{{url_for('profile',user_id = user.id)}}" method="post">
+						<img src = "{{url_for('static',filename = 'x.png')}}" height = "10px">
+						<input type="submit" name="x" style = "background:url('{{url_for('static',filename = 'x.png')}}')">
+						</form>
+						
+						
+						</li>
+						
+						{% endfor %}
+						{% endif %}
+						
+
+						</ul>
+
+
+
+                         </div>
+
+                    </div>
+                </div>
+            
+            <div class="col-md-6">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h4><i class="fa fa-fw fa-check"></i> Where you have dived:</h4>
+                        <h6>You have dove in % of the destinations!</h6>
+                    </div>
+                    <div class="panel-body">
+
+						<ul id = "favs">
+						{% for d in been%}
+						<li>
+						<a href= "{{url_for('boatplace', boat_id = ship.id)}}"><p> {{ship.name}}</p></a>
 
 						</li>
-						{% endif %}
+						
 						{% endfor %}
 
 						</ul>
@@ -89,6 +128,8 @@
                     </div>
                 </div>
             </div>
+           </div>
+          </div>
 </div>
             
 
