--- a/templates/login.html
+++ b/templates/login.html
@@ -40,7 +40,7 @@ h1 {
   padding: 10px;
   margin: 0;
   color: #fff;
-  background-color: blue;
+  background-color:#3CCBE8;
   margin-bottom: 15px;
 }
 
