--- a/templates/signup.html
+++ b/templates/signup.html
@@ -35,7 +35,7 @@ h1 {
   padding: 10px;
   margin: 0;
   color: #fff;
-  background-color: blue;
+  background-color:#3CCBE8;
   margin-bottom: 15px;
 }
 
