--- a/templates/places.html
+++ b/templates/places.html
@@ -47,10 +47,9 @@
                    <li>
                         <a href="{{url_for('places')}}">Places</a>
                     </li>
-                    <li>
-                        <a href="services.html">News</a>
+                     <li>
+                        <a href="{{url_for('about')}}">About me</a>
                     </li>
-                    
                     </li>
                      <li>
                         <a href="{{url_for('boats')}}">Boats</a>
