--- a/templates/aboutme.html
+++ b/templates/aboutme.html
@@ -1,10 +1,83 @@
-
 <!DOCTYPE html>
 <html>
 <head>
-	<title>About me</title>
+
+<meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>Dive place</title>
+
+    <!-- Bootstrap Core CSS -->
+    <link href="{{url_for('static', filename='css/bootstrap.min.css')}}" rel="stylesheet">
+   
+
+    <!-- Custom CSS -->
+    <link href="{{url_for('static', filename='css/clean-blog.min.css')}}" rel="stylesheet">
+
+    <!-- Custom Fonts -->
+     <link href="{{url_for('static', filename='css/bootstrap.css')}}" rel="stylesheet">
+<link rel = stylesheet type="text/css" href="{{url_for('static', filename='style.css')}}">
+	  <script src="{{url_for('static', filename='j.js')}}"></script> 
+	  <style>
+	  .img-circle {
+    border-radius: 50%;
+}
+.about{
+	border: "10px";
+}
+	  </style>
 </head>
 <body>
+ <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+               <p class="navbar-brand">Scuba Scuba</p>
+            </div>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <a href="{{url_for('places')}}">Places</a>
+                    </li>
+                     <li>
+                        <a href="{{url_for('boats')}}">Boats</a>
+                    </li>
+                    <li>
+                        <a href="{{url_for('about')}}">About me</a>
+                    
+
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container -->
+    </nav>
+    {% for i in range(5) %}
+    <br>
+    {% endfor %}
+    <center>
+    <img class="img-circle" src = "{{url_for('static',filename = 'me.jpg')}}" height = "300px">
+    {% for i in range(3) %}
+    <br>
+    {% endfor %}
+    <div class = "about">
+    <p><img src = {{url_for('static', filename = "name.png")}} height="25px"> Tehila Pelled </p>
+    <p><img src = {{url_for('static', filename = "lo.png")}} height="25px"> Jerusalem, Israel </p>
+    <p><img src = {{url_for('static', filename = "age.png")}} height="25px"> 16 </p>
+ 	<p><img src = {{url_for('static', filename = "heart.png")}} height="25px"> Technology, sports,friends and<br> ofcourse, Scuba diving!</p>
+ 	</div>
+    </center>
+
 
 </body>
 </html>
