--- a/templates/profile.html
+++ b/templates/profile.html
@@ -21,6 +21,7 @@
      <link href="{{url_for('static', filename='css/bootstrap.css')}}" rel="stylesheet">
 <link rel = stylesheet type="text/css" href="{{url_for('static', filename='style.css')}}">
 	  <script src="{{url_for('static', filename='j.js')}}"></script> 
+	  
 </head>
 <body>
  <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
@@ -44,8 +45,8 @@
                      <li>
                         <a href="{{url_for('boats')}}">Boats</a>
                     </li>
-                    <li>
-                        <a href="services.html">News</a>
+                     <li>
+                        <a href="{{url_for('about')}}">About me</a>
                     </li>
                     <li><a href="{{url_for('profile', user_id = user.id)}}">My profile</a>
                     </li>
@@ -101,7 +102,7 @@
                 <div class="panel panel-default">
                     <div class="panel-heading">
                         <h4><i class="fa fa-fw fa-check"></i> Where you have dived:</h4>
-                        <h6>You have dove in {{s}}% of the destinations!</h6>
+                        <h6>You have dove in <strong>{{s}}%</strong> of the destinations!</h6>
                     </div>
                     <div class="panel-body">
 
@@ -111,7 +112,7 @@
 						{% else %}
 						{% for d in user.places_been %}
 						<li>
-						<a href= "{{url_for('boatplace', boat_id = ship.id)}}"><p> {{d.name}}</p></a>
+						<p> {{d.name}}</p></a>
 
 						</li>
 						
