--- a/templates/aboutme.html
+++ b/templates/aboutme.html
@@ -53,7 +53,8 @@
                         <a href="{{url_for('boats')}}">Boats</a>
                     </li>
                     <li>
-                        <a href="{{url_for('about')}}">About me</a>
+                        <a href="{{url_for('about')}}">About me</a></li>
+                     
                     
 
                 </ul>
