--- a/templates/signup.html
+++ b/templates/signup.html
@@ -27,6 +27,7 @@ body{
   position: absolute;
   top:20%;
   left:35%;
+  font-family:'Arial';
 }
 
 /* form header */
@@ -50,7 +51,7 @@ input:not([type="button"]) {
   -webkit-transition: all .5s;
   -moz-transition: all .5s;
   transition: all .5s;
-  font-family: 'Open Sans', 'sans-serif';
+  font-family:'Arial';
 }
 
 input:not([type="button"]):focus {
@@ -74,6 +75,7 @@ input[type="button"] {
   outline: none;
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
+	font-family:'Arial';
 }
 
 input[type="button"]:active {
